--- a/mysite/templates/test.html
+++ b/mysite/templates/test.html
@@ -1,12 +1,12 @@
+{% load staticfiles %}
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <title>Test</title>
-    <script src="/static/jquery-3.2.0.min.js"></script>
-    <link rel="stylesheet" href="/static/bootstrap.css">
-    <script src="/static/bootstrap.min.js"></script>
-    <script src="/static/bootstrap"></script>
+    <script src="{{ STATIC_URL }}jquery-3.2.0.min.js"></script>
+    <link href="{{ STATIC_URL }}bootstrap.min.css" rel="stylesheet">
+    <script src="{{ STATIC_URL }}bootstrap.min.js"></script>
 </head>
 <body>
     <div class="container">
