--- a/mysite/templates/test.html
+++ b/mysite/templates/test.html
@@ -4,13 +4,24 @@
 <head>
     <meta charset="UTF-8">
     <title>Test</title>
-    <script src="{{ STATIC_URL }}jquery-3.2.0.min.js"></script>
-    <link href="{{ STATIC_URL }}bootstrap.min.css" rel="stylesheet">
-    <script src="{{ STATIC_URL }}bootstrap.min.js"></script>
+    <script src=" {% static 'lib/js/jquery.min.js' %}"></script>
+    <link href="{% static 'lib/css/bootstrap.min.css' %}" rel="stylesheet">
+    <script src="{% static 'lib/js/bootstrap.min.js' %}"></script>
 </head>
 <body>
     <div class="container">
-
+<div class="btn-group">
+  <button type="button" class="btn btn-success dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+    Action <span class="caret"></span>
+  </button>
+  <ul class="dropdown-menu">
+    <li><a href="#">Action</a></li>
+    <li><a href="#">Another action</a></li>
+    <li><a href="#">Something else here</a></li>
+    <li role="separator" class="divider"></li>
+    <li><a href="#">Separated link</a></li>
+  </ul>
+</div>
     </div>
 
 </body>
